<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNengo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/lv_lifeplan1_long_nengo"
            android:textSize="16sp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="110dp" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lv_lifeplan1_long_year"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline1" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="210dp" />

        <TextView
            android:id="@+id/tvOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lv_lifeplan1_long_old"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvZandaka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/lv_lifeplan1_long_zandaka"
            android:textSize="20sp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="200dp" />

        <TextView
            android:id="@+id/tvShuusi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lv_lifeplan1_long_shuusi"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/guideline3" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>