<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivKazokuListIcon"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvKazokuName"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/tv_lifeplan_edit_kazoku_kazoku_name"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivKazokuListIcon"
        app:layout_constraintStart_toEndOf="@+id/ivKazokuListIcon"
        app:layout_constraintTop_toTopOf="@+id/ivKazokuListIcon" />

    <TextView
        android:id="@+id/tvKazokuOld"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="left"
        android:text="@string/tv_old"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvKazokuName"
        app:layout_constraintStart_toEndOf="@+id/tvKazokuName"
        app:layout_constraintTop_toTopOf="@+id/tvKazokuName" />

    <TextView
        android:id="@+id/tvKazokuOldTani"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="left"
        android:text="@string/tv_tani_old"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvKazokuOld"
        app:layout_constraintStart_toEndOf="@+id/tvKazokuOld"
        app:layout_constraintTop_toTopOf="@+id/tvKazokuOld" />

</android.support.constraint.ConstraintLayout>
